# itu-hw2-menu-project

./: .gitignore  CMakeLists.txt  README.md
include/: hw2_food_types.hpp  hw2_json_loader.hpp  hw2_menu_item.hpp  hw2_recommender.hpp  hw2_user_menu.hpp
src/: hw2_main.cpp  hw2_menu.cpp  hw2_recommender.cpp
